samples/_failures_safe/1761219491_87ce3a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c3a32f8.c: In function ‘main’:
./samples/SAFE/__tmp_8c3a32f8.c:141:5: error: expected declaration or statement at end of input
  141 |     }
      |     ^
